[gd_scene load_steps=8 format=2]

[ext_resource path="res://Object/CrushEnemy/Crusher.png" type="Texture" id=1]
[ext_resource path="res://Object/CrushEnemy/Crusher.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.9, 6.9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 128 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.8, 1 )

[node name="Crusher" type="KinematicBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="PlayerKill" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKill"]
shape = SubResource( 2 )

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2( 0, 136 )
shape = SubResource( 4 )

[node name="CameraDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraDetect"]
shape = SubResource( 5 )

[node name="BoxCrush" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="Shape" type="CollisionShape2D" parent="BoxCrush"]
position = Vector2( 0, 8 )
shape = SubResource( 3 )
disabled = true
[connection signal="body_entered" from="PlayerKill" to="." method="_on_PlayerKill_body_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_PlayerDetect_body_exited"]
[connection signal="body_entered" from="CameraDetect" to="." method="_on_CameraDetect_body_entered"]
[connection signal="body_exited" from="CameraDetect" to="." method="_on_CameraDetect_body_exited"]
[connection signal="body_entered" from="BoxCrush" to="." method="_on_BoxCrush_body_entered"]
